# c-logger

./: CMakeLists.txt
src/: logger.c
